--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 </head>
 <body>
     <h1>hello, world</h1>
+    <img src="breaching_whale.jpg" alt="">
     <p>call me ishmael</p>
 </body>
 </html>
